Removed the serialization configuration for the project and add two new projects.

--- a/src/AvenueClothing.B2C/Views/PartialViews/CategoryNavigation.cshtml
+++ b/src/AvenueClothing.B2C/Views/PartialViews/CategoryNavigation.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Mvc.Html
-@using AvenueClothing.B2C.ViewModels
+@using AvenueClothing.Project.Website.ViewModels
 
-@model AvenueClothing.B2C.ViewModels.CategoryNavigationViewModel
+@model AvenueClothing.Project.Website.ViewModels.CategoryNavigationViewModel
 @{
 	Layout = null;
 }
