Remove category navigation to Catalog module.

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/PartialViews/CategoryNavigation.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/PartialViews/CategoryNavigation.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Mvc.Html
-@using AvenueClothing.Project.Website.ViewModels
+@using AvenueClothing.Feature.Catalog.Module.ViewModels
 
-@model AvenueClothing.Project.Website.ViewModels.CategoryNavigationViewModel
+@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryNavigationViewModel
 @{
 	Layout = null;
 }
