Refactored items structure.

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/header.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/header.cshtml
@@ -14,7 +14,7 @@
 					<ul class="nav">
 						<li>
 							<h1>@Html.Sitecore().Field("Title")</h1>
-							<p>@Html.Sitecore().Field("Body")</p>
+							<p>@Html.Sitecore().Field("Decsription")</p>
 						</li>
 					</ul>
 				</div>
