Added jquery and bootstrap scripts to layout. Finished the carousel.

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -24,7 +24,7 @@
 		@Html.Sitecore().Placeholder("footer")
 	</footer>
 </div>
-
-	<script src="Scripts/bootstrap.min.js" />
+    <script src="~/Scripts/jquery-3.0.0.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
