Now uses SearchLibrary to get products for a category.

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
@@ -15,10 +15,10 @@
 		{
 			<div class="product col-sm-4 col-md-4 col-xs-2" id="@product.Sku">
 				<div class="product-image">
-					@*@if (!string.IsNullOrEmpty(product.ThumbnailImageUrl))
+					@if (!string.IsNullOrEmpty(product.ThumbnailImageUrl))
 					{
 						<a href="@product.Url"><img src="@product.ThumbnailImageUrl"></a>
-					}*@
+					}
 				</div>
 
 				<p class="item-name"><a href="@product.Url">@product.Name</a></p>
