--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -39,5 +39,6 @@
 	</div>
 	<script src="~/Scripts/jquery-3.0.0.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
+	<script src="~/Scripts/uCommerce.facets.js"></script>
 </body>
 </html>
