--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
@@ -11,26 +11,9 @@
 
 <div class="row">
 	<div class="product-list col-sm-12 col-md-12">
-		@foreach (var product in Model.Products)
+		@foreach (var productId in Model.ProductIds)
 		{
-			<div class="product col-sm-4 col-md-4 col-xs-2" id="@product.Sku">
-				<div class="product-image">
-					@if (!string.IsNullOrEmpty(product.ThumbnailImageUrl))
-					{
-						<a href="@product.Url"><img src="@product.ThumbnailImageUrl"></a>
-					}
-				</div>
-
-				<p class="item-name"><a href="@product.Url">@product.Name</a></p>
-				<p class="item-price" data-productsku="@product.Sku"></p>
-				<p class="btn-group view-details">
-					<a href="@product.Url" class="btn btn-default">
-						View more <span>
-							<i class="fa fa-shopping-cart icon-white" aria-hidden="true"></i>
-						</span>
-					</a>
-				</p>
-			</div>
+			@Html.Sitecore().ControllerRendering("ProductCard", "ProductCard", new { productId = productId });
 		}
 	</div>
 </div>
