--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
@@ -13,7 +13,8 @@
 	<div class="product-list col-sm-12 col-md-12">
 		@foreach (var productId in Model.ProductIds)
 		{
-			@Html.Sitecore().ControllerRendering("ProductCard", "ProductCard", new { productId = productId });
+			@*@Html.Sitecore().ControllerRendering("ProductCard", "ProductCard", new { productId = productId });*@
+            @Html.Sitecore().Rendering("9851F13D-1DC8-4D36-8C99-6C2E42D115B8", new {productId = productId});     
 		}
 	</div>
 </div>
