Add to basket module - initial version

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -39,6 +39,13 @@
 	</div>
 	<script src="~/Scripts/jquery-3.0.0.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
-	<script src="~/Scripts/uCommerce.facets.js"></script>
+    <script src="~/Scripts/uCommerce.facets.js"></script>
+    <script src="~/Scripts/js-add-to-basket-button.js"></script>
+    <script src="~/Scripts/js-mini-basket.js"></script>
+    <script>
+        $(document).ready(function() {
+            AddToBasketButton.init($(document));
+        });
+    </script>
 </body>
 </html>
