--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/header.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/header.cshtml
@@ -5,7 +5,7 @@
 @{
 	Layout = null;
 }
-<div class="navbar">
+@*<div class="navbar">
 	<a class="col-md-3 navbar-brand" href="/">Avenue Clothing</a>
 
 	<div class="navbar">
@@ -14,14 +14,25 @@
 				<div class="row-fluid">
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li>
-								<h1>@Html.Sitecore().Field("Title")</h1>
-								<p>@Html.Sitecore().Field("Decsription")</p>
-							</li>
+							@Html.Sitecore().Placeholder("headerContent")
 						</ul>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+</div>*@
+
+<div class="navbar navbar-fixed-top">
+	<div class="container">
+
+		<div class="row">
+			<div class="navbar-header">
+				<a class="col-md-3 navbar-brand" href="/">Avenue Clothing</a>
+			</div>
+
+			@Html.Sitecore().Placeholder("header content")
+
 		</div>
 	</div>
 </div>
