--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductViewModel
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductViewModel
 @{
     Layout = null;
 }
