--- a/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/MiniBasket.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/MiniBasket.cshtml
@@ -1,32 +1,34 @@
 ﻿@using System.Web.Mvc.Html
 @using AvenueClothing.Feature.Transaction.Module.ViewModels
-@using Sitecore.Mvc
 
 @model AvenueClothing.Feature.Transaction.Module.ViewModels.MiniBasketViewModel
 @{
 	Layout = null;
+	var emptyClass = Model.IsEmpty ? "" : "hidden-xl-down";
+	var notEmptyClass = !Model.IsEmpty ? "" : "hidden-xl-down";
 }
 
-@if (Model.IsEmpty)
-{
-	<div class="pull-xs-right navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-				<div>Your basket is empty</div>
-			</li>
-		</ul>
+<div class="js-mini-basket" data-refresh-url="@Model.RefreshUrl">
+	<div class="js-mini-basket-empty @emptyClass">
+		<div class="pull-xs-right navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li>
+					<div>Your basket is empty</div>
+				</li>
+			</ul>
+		</div>
 	</div>
-}
-else
-{
 
-	<div class="pull-xs-right navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-				<div>@Model.NumberOfItems item(s) in basket, total: @Model.Total</div>
-			</li>
-		</ul>
+	<div class="js-mini-basket-not-empty @notEmptyClass">
+		<div class="pull-xs-right navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li>
+					<div>
+						<span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s) in basket, total: <span class="js-mini-basket-total">@Model.Total</span>
+					</div>
+				</li>
+			</ul>
+		</div>
 	</div>
-}
-
+</div>
 
