update to match the new way of commication between components.

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -44,7 +44,8 @@
     <script src="~/Scripts/js-mini-basket.js"></script>
     <script>
         $(document).ready(function() {
-            AddToBasketButton.init($(document));
+        	AddToBasketButton.init($(document));
+	        MiniBasket.init($(document));
         });
     </script>
 </body>
