--- a/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/MiniBasket.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/MiniBasket.cshtml
@@ -8,7 +8,7 @@
 	var notEmptyClass = !Model.IsEmpty ? "" : "hidden-xl-down";
 }
 
-<div class="js-mini-basket" data-refresh-url="@Model.RefreshUrl">
+<div class="js-mini-basket" data-refresh-url="@Model.RefreshUrl" data-mini-basket-empty-selector=".js-mini-basket-empty" data-mini-basket-not-empty-selector=".js-mini-basket-not-empty" data-mini-basket-number-of-items-selector=".js-mini-basket-number-of-items" data-mini-basket-total-selector=".js-mini-basket-total">
 	<div class="js-mini-basket-empty @emptyClass">
 		<div class="pull-xs-right navbar-collapse">
 			<ul class="nav navbar-nav">
