Added Variant Picker to layout file

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -41,10 +41,12 @@
 	<script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/uCommerce.facets.js"></script>
     <script src="~/Scripts/js-add-to-basket-button.js"></script>
+    <script src="~/Scripts/js-variant-picker.js"></script>
     <script src="~/Scripts/js-mini-basket.js"></script>
     <script>
         $(document).ready(function() {
-        	AddToBasketButton.init($(document));
+            AddToBasketButton.init($(document));
+            VariantPicker.init($(document));
 	        MiniBasket.init($(document));
         });
     </script>
