Quantity Picker inital version

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -42,11 +42,13 @@
     <script src="~/Scripts/uCommerce.facets.js"></script>
     <script src="~/Scripts/js-add-to-basket-button.js"></script>
     <script src="~/Scripts/js-variant-picker.js"></script>
+    <script src="~/Scripts/js-quantity-picker.js"></script>
     <script src="~/Scripts/js-mini-basket.js"></script>
     <script>
         $(document).ready(function() {
             AddToBasketButton.init($(document));
             VariantPicker.init($(document));
+            QuantityPicker.init($(document));
 	        MiniBasket.init($(document));
         });
     </script>
