New Product list to render products and refactored categorys to use products list on sitecore item.

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -40,5 +40,6 @@
 	<script src="~/Scripts/jquery-3.0.0.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
 	<script src="~/Scripts/uCommerce.facets.js"></script>
+	<script src="~/Scripts/uCommerce.scrolling.js"></script>
 </body>
 </html>
