--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
@@ -1,20 +1,32 @@
-﻿
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductViewModel
+﻿@using Sitecore.Data
+@using Sitecore.Mvc
+@using Sitecore.Web.UI.WebControls.Presentation
+@using Item = Sitecore.Data.Items.Item
+
 @{
-    Layout = null;
+	Layout = null;
+
+	Database database = Sitecore.Context.Database;
+	Item productItem = database.GetItem(Model.Rendering.Properties["productItem"]);
+
+	var displayName = productItem.DisplayName;
+	var sku = productItem.Fields["SKU"];
+	var thumbnailImageUrl = productItem.Fields["Thumbnail image"];
+	var url = "";
 }
-<div class="product col-sm-4 col-md-4 col-xs-2" id="@Model.Sku">
+
+<div class="product col-sm-4 col-md-4 col-xs-2" id="@sku">
 	<div class="product-image">
-		@if (!string.IsNullOrEmpty(Model.ThumbnailImageUrl))
+		@*@if (!string.IsNullOrEmpty(@thumbnailImageUrl))
 		{
-			<a href="@Model.Url"><img src="@Model.ThumbnailImageUrl"></a>
-		}
+			<a href="@url"><img src="@thumbnailImageUrl"></a>
+		}*@
 	</div>
 
-	<p class="item-name"><a href="@Model.Url">@Model.Name</a></p>
-	<p class="item-price" data-productsku="@Model.Sku"></p>
+	<p class="item-name"><a href="@Url">@displayName</a></p>
+	<p class="item-price" data-productsku="@sku"></p>
 	<p class="btn-group view-details">
-		<a href="@Model.Url" class="btn btn-default">
+		<a href="@url" class="btn btn-default">
 			View more <span>
 				<i class="fa fa-shopping-cart icon-white" aria-hidden="true"></i>
 			</span>
