View Rendering for Breadcrumb in place. Category navigation broken - cannot test

--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -28,6 +28,9 @@
 
 				</div>
 				<div class="col-sm-9 col-md-9">
+                
+                        @Html.Sitecore().Placeholder("breadcrumb")
+                
 					@Html.Sitecore().Placeholder("main")
 				</div>
 
