--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
@@ -7,7 +7,7 @@
 	<div class="product-list col-sm-12 col-md-12">
 		@foreach (var productItem in productItems)
 		{
-			@Html.Sitecore().Rendering("6D87A255-98D5-4136-B727-36E5F2C61E9B", new { productItem });
+			@Html.Sitecore().ControllerRendering("ProductCard", "ProductCard", new { productItem })
 		}
 	</div>
 </div>
