QuantityPicker, VariantPicker and AddToBasket bug fixes

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
@@ -10,4 +10,4 @@
 <h1>@Html.Sitecore().Field("Name")</h1>
 
 
-@Html.Sitecore().Rendering("FEBEE42A-F312-47E7-BA47-0AEDECBFB9D5");
+@Html.Sitecore().Rendering("FEBEE42A-F312-47E7-BA47-0AEDECBFB9D5")
