--- a/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Index.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Index.cshtml
@@ -7,7 +7,7 @@
 @foreach (var variant in Model.Variants)
 {
     <div>variant.DisplayName</div>
-    <select class="variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
+    <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
         <option value="">-- Please Select --</option>
         @foreach (var variantItem in variant.VaraintItems)
         {
