--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -47,10 +47,10 @@
     <script src="~/Scripts/js-mini-basket.js"></script>
     <script>
         $(document).ready(function() {
-            AddToBasketButton.init($(document));
-            VariantPicker.init($(document));
-            QuantityPicker.init($(document));
-	        MiniBasket.init($(document));
+            AddToBasketButton.init($(document), $("*"));
+            VariantPicker.init($(document), $("*"));
+            QuantityPicker.init($(document), $("*"));
+            MiniBasket.init($(document), $("*"));
         });
     </script>
 </body>
