--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
@@ -1,4 +1,5 @@
-﻿@using Sitecore.Mvc
+﻿@using System.Web.Mvc.Html
+@using Sitecore.Mvc
 @{
 	Layout = null;
 	var productItems = Html.Sitecore().Field("Products").ToHtmlString().Split('|').ToList();
@@ -6,8 +7,8 @@
 <div class="row">
 	<div class="product-list col-sm-12 col-md-12">
 		@foreach (var productItem in productItems)
-		{
-			@Html.Sitecore().ControllerRendering("ProductCard", "ProductCard", new { productItem })
+        {
+            @Html.Sitecore().Rendering("9851F13D-1DC8-4D36-8C99-6C2E42D115B8", new { productItem })
 		}
 	</div>
 </div>
