Breadcrumbs picking up sitecore nodes as well. Must convert to Controller Rendering instead.

--- a/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
+++ b/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
@@ -4,13 +4,13 @@
     {
         <li class="breadcrumb-item">
             @if (@item.IsActive)
-            { @item.BreadcrumbName }
+            { @item.BreadcrumbName}
             else
             {
                 <a href="@item.BreadcrumbUrl">
-                    @item.BreadcrumbUrl
+                    @item.BreadcrumbName
                 </a>
             }
         </li>
-    }
+        }
 </ol>
