Showing the right categories - root

--- a/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
+++ b/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
@@ -7,7 +7,7 @@
             { @item.BreadcrumbName}
             else
             {
-                <a href="@item.UcommerceBreadcrumbUrl">
+                <a href="@item.BreadcrumbUrl">
                     @item.BreadcrumbName
                 </a>
             }
