the right breadcrumbs in the wrong order

--- a/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
+++ b/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
@@ -8,7 +8,7 @@
             else
             {
                 <a href="@item.BreadcrumbUrl">
-                    @item.BreadcrumbName
+                    @item.Name
                 </a>
             }
         </li>
