Rendering correctly. Fixed the Tops category product listing which gave YSOD.

--- a/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
+++ b/src/AvenueClothing.Feature.General.Module/Views/Breadcrumb.cshtml
@@ -4,11 +4,11 @@
     {
         <li class="breadcrumb-item">
             @if (@item.IsActive)
-            { @item.BreadcrumbName}
+            { @item.DisplayName}
             else
             {
                 <a href="@item.BreadcrumbUrl">
-                    @item.Name
+                    @item.DisplayName
                 </a>
             }
         </li>
