--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductList.cshtml
@@ -5,10 +5,12 @@
 	var productItems = Html.Sitecore().Field("Products").ToHtmlString().Split('|').ToList();
 }
 <div class="row">
+    @if (!string.IsNullOrEmpty(productItems[0]))
+    {
 	<div class="product-list col-sm-12 col-md-12">
 		@foreach (var productItem in productItems)
         {
 			@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productItem })
-		}
-	</div>
+        }
+	</div>}
 </div>
