--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category.cshtml
@@ -6,15 +6,14 @@
 @{
 	Layout = null;
 }
-
-<h1>@Html.Sitecore().Field("Name")</h1>
-
-
-<div class="row">
-	<div class="product-list col-sm-12 col-md-12">
-		@foreach (var productItem in Model.ProductItemGuids)
-		{
-			@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productItem })
-		}
+<div class="category">
+	<h1>@Html.Sitecore().Field("Name")</h1>
+	<div class="row">
+		<div class="product-list col-sm-12 col-md-12">
+			@foreach (var productItem in Model.ProductItemGuids)
+			{
+				@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productItem })
+			}
+		</div>
 	</div>
 </div>
