--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard.cshtml
@@ -1,22 +1,26 @@
 ﻿@using Sitecore.Data
 @using Sitecore.Mvc
+@using Sitecore.Mvc.Presentation
 @using Sitecore.Web.UI.WebControls.Presentation
 @using Item = Sitecore.Data.Items.Item
 @model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductViewModel
 @{
 	Layout = null;
+	Database database = Sitecore.Context.Database;
+	Item productItem = database.GetItem(RenderingContext.Current.Rendering.Properties["productItem"]);
+	RenderingContext.Current.ContextItem = productItem;
 }
 
-<div class="product col-sm-4 col-md-4 col-xs-2" id="@Model.Sku">
+<div class="product col-sm-4 col-md-4 col-xs-2" id="@Html.Sitecore().Field("sku")">
 	<div class="product-image">
-		@*@if (!string.IsNullOrEmpty(@thumbnailImageUrl))
-	{
-		<a href="@Model.Url"><img src="@thumbnailImageUrl"></a>
-	}*@
+		@if (!string.IsNullOrEmpty(@Html.Sitecore().Field("Thumbnail image").ToString()))
+		{
+			<a href="@Model.Url">@Html.Sitecore().Field("Thumbnail image")</a>
+		}
 	</div>
 
-	<p class="item-name"><a href="@Url">@Model.Name</a></p>
-	<p class="item-price" data-productsku="@Model.Sku"></p>
+	<p class="item-name"><a href="@Model.Url">@Html.Sitecore().Field("Display Name")</a></p>
+	<p class="item-price">@Model.PriceCalculation.YourPrice.Amount</p>
 	<p class="btn-group view-details">
 		<a href="@Model.Url" class="btn btn-default">
 			View more <span>
