--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductDetails.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductDetails.cshtml
@@ -27,7 +27,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Maecenas placerat elementum tristique.Ut ut pretium massa.Nullam mollis lobortis rutrum. Integer quis tellus enim. Donec viverra aliquam faucibus. Nam ac eros velit. Mauris vel adipiscing turpis. Mauris id tortor et augue tincidunt molestie in sed lectus.</p>
         </div>
         <div id="customer-reviews" class="tab-pane" role="tabpanel">
-            @* @Html.Sitecore().Rendering("<Reviews here>") *@
+            @Html.Sitecore().Rendering("93411B0B-FF7F-4D1E-A2EB-769FCA3B4B99")
         </div>
     </div>
 </section>
