--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ReviewForm.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ReviewForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Guid
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryProductGuid
 @using System.Web.Mvc
 @using System.Web.Mvc.Html
 @{
@@ -62,6 +62,7 @@
                 <input type="hidden" name="reviewed-product-sku"/>
             </div>
         </div>
-        <input type="hidden" name="ProductGuid" value="@Model">
+        <input type="hidden" name="ProductGuid" value="@Model.ProductGuid">
+        <input type="hidden" name="CategoryGuid" value="@Model.CategoryGuid"/>
     </div>
 }
