--- a/src/AvenueClothing.Feature.Catalog.Module/Views/HomepageCatalog.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/HomepageCatalog.cshtml
@@ -1,10 +1,13 @@
-﻿@using Sitecore.Mvc
+﻿@using System.Collections.Specialized
+@using Sitecore.Data.Fields
+@using Sitecore.Mvc
+@using Sitecore.Mvc.Presentation
 @{
 	Layout = null;
 }
 
 @{
-	var productItems = Html.Sitecore().Field("Products").ToHtmlString().Split('|').ToList();
+	var productItems = RenderingContext.Current.ContextItem.Fields["Products"].ToString().Split('|').ToList();
 }
 
 <div class="row">
