--- a/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Avenue Clothing/Layout.cshtml
@@ -50,6 +50,7 @@
     <script src="~/Scripts/js-mini-basket.js"></script>
 	<script src="~/Scripts/js-infinite-scrolling.js"></script>
     <script src="~/Scripts/uCommerce.demostore.productpage.js"></script>
+	<script src="~/Scripts/js-addresses.js"></script>
 	<script>
 		$(document).ready(function () {
 			AddToBasketButton.init($(document), $("*"));
