--- a/src/AvenueClothing.Feature.Transaction.Module/Views/Address/Addresses.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/Address/Addresses.cshtml
@@ -1,114 +1,18 @@
 ﻿@model AvenueClothing.Feature.Transaction.Module.ViewModels.AddressDetailsViewModel
 
-@using System.Web.Mvc.Html
-@using Sitecore.Mvc
-@using Sitecore.Mvc.Presentation
 @{
 	Layout = null;
-
-	var AddressType = @Html.Sitecore().CurrentRendering.Parameters["AddressType"];
 }
 
-<form method="post" class="validate submit-addresses">
-	<div class="col-md-6 no-horizontal-padding js-addresses @AddressType">
-		<div class="col-md-12 well no-left-margin">
-			<legend>@AddressType</legend>
-			<div class="col-md-6 control-group form-group">
+<!DOCTYPE html>
 
-				<label>First name</label>
-				@Html.TextBoxFor(x => x.BillingAddress.FirstName, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>E-mail</label>
-				@Html.TextBoxFor(x => x.BillingAddress.EmailAddress, new {@class = "col-md-12 form-control required email margin-bottom"})
-
-				<label>Attention</label>
-				@Html.TextBoxFor(x => x.BillingAddress.Attention, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Street 2</label>
-				@Html.TextBoxFor(x => x.BillingAddress.Line2, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Postal code</label>
-				@Html.TextBoxFor(x => x.BillingAddress.PostalCode, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>Phone</label>
-				@Html.TextBoxFor(x => x.BillingAddress.PhoneNumber, new {@class = "col-md-12 form-control margin-bottom"})
-
-			</div>
-
-			<div class="col-md-6 control-group form-group">
-
-				<label>Last name</label>
-				@Html.TextBoxFor(x => x.BillingAddress.LastName, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>Company</label>
-				@Html.TextBoxFor(x => x.BillingAddress.CompanyName, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Street</label>
-				@Html.TextBoxFor(x => x.BillingAddress.Line1, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>City</label>
-				@Html.TextBoxFor(x => x.BillingAddress.City, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Country</label>
-				@Html.DropDownList("BillingAddress.CountryId", Model.AvailableCountries, new {@class = "countryDropdownCheckout margin-bottom form-control"})
-
-				<label>Mobile phone</label>
-				@Html.TextBoxFor(x => x.BillingAddress.MobilePhoneNumber, new {@class = "col-md-12 form-control margin-bottom"})
-
-			</div>
-
-		</div>
-
-		<div id="shippingAddress" class="col-md-6 well display-none">
-			<legend>Shipping address</legend>
-
-			<div class="col-md-6 control-group form-group">
-
-				<label>First name</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.FirstName, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>E-mail</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.EmailAddress, new {@class = "col-md-12 form-control required email margin-bottom"})
-
-				<label>Attention</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.Attention, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Street 2</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.Line2, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Postal code</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.PostalCode, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>Phone</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.PhoneNumber, new {@class = "col-md-12 form-control margin-bottom"})
-
-			</div>
-
-			<div class="col-md-6 control-group form-group">
-
-				<label>Last name</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.LastName, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>Company</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.CompanyName, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Street</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.Line1, new {@class = "col-md-12 form-control required margin-bottom"})
-
-				<label>City</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.City, new {@class = "col-md-12 form-control margin-bottom"})
-
-				<label>Country</label>
-				@Html.DropDownList("ShippingAddress.CountryId", Model.AvailableCountries, new {@class = "countryDropdownCheckout margin-bottom form-control"})
-
-				<label>Mobile phone</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.MobilePhoneNumber, new {@class = "col-md-12 form-control margin-bottom"})
-
-			</div>
-		</div>
-	</div>
-	<div class="display-block">
-		<a href="/cart" class="btn btn-secondary">Back to Cart</a>
-		<input type="submit" class="btn btn-secondary btn-lg pull-right" value="Continue to shipping method" />
-	</div>
-</form>
+<html>
+<head>
+	<title>title</title>
+</head>
+<body>
+<div>
+	  
+</div>
+</body>
+</html>
