Renamed models and controllers

--- a/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Transaction.Module.ViewModels.MiniBasketViewModel
+﻿@model AvenueClothing.Feature.Transaction.Module.ViewModels.MiniBasketRenderingViewModel
 @{
     Layout = null;
     var emptyClass = Model.IsEmpty ? "display:none;" : null;
