Renamed Controller Actions and models to name them the same way

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/CatalogImageCarusel/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/CatalogImageCarusel/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.CarouselViewModel
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.CatalogImageCaruselRenderingViewModel
 
 <div id="myCarousel" class="carousel slide">
     <div class="carousel-inner">
