--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category/Rendering.cshtml
@@ -2,7 +2,7 @@
 @using AvenueClothing.Feature.Catalog.Module.ViewModels
 @using Sitecore.Mvc
 
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryViewModel
+@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryRenderingViewModel
 @{
 	Layout = null;
 }
