--- a/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
@@ -1,12 +1,12 @@
 ﻿@using System.Web.Mvc.Html
 @using AvenueClothing.Feature.Catalog.Module.ViewModels
 
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryNavigationViewModel
+@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryNavigationRenderingViewModel
 @{
 	Layout = null;
 }
 
-@helper DisplayCategories(IList<CategoryViewModel> categories)
+@helper DisplayCategories(List<CategoryNavigationRenderingViewModel.Category> categories)
 {
 	<ul class="nav nav-pills nav-stacked">
 		@foreach (var category in categories)
