--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductCard/Rendering.cshtml
@@ -3,7 +3,7 @@
 @using Sitecore.Mvc.Presentation
 @using Sitecore.Web.UI.WebControls.Presentation
 @using Item = Sitecore.Data.Items.Item
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductViewModel
+@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductCardRenderingViewModel
 @{
 	Layout = null;
 	Database database = Sitecore.Context.Database;
