--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ReviewForm/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryProductGuid
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.ReviewFormRenderingViewModel
 @using System.Web.Mvc
 @using System.Web.Mvc.Html
 @{
