More fixes for the renaming massacre.

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Rendering.cshtml
@@ -1,5 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.VariantPickerViewModel
-
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.VariantPickerRenderingViewModel
 @{
     Layout = null;
 }
