--- a/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/VariantPicker/Rendering.cshtml
@@ -5,7 +5,7 @@
 
 @foreach (var variant in Model.Variants)
 {
-    <div>variant.DisplayName</div>
+    <div>@variant.DisplayName</div>
     <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
         <option value="">-- Please Select --</option>
         @foreach (var variantItem in variant.VaraintItems)
