mini basket is now a link to the cart page when there is anything in the basket.

--- a/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/MiniBasket/Rendering.cshtml
@@ -21,7 +21,9 @@
 			<ul class="nav navbar-nav">
 				<li>
 					<div>
-						<span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s) in basket, total: <span class="js-mini-basket-total">@Model.Total</span>
+						<a href="/cart">
+							<span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s) in basket, total: <span class="js-mini-basket-total">@Model.Total</span>
+						</a>
 					</div>
 				</li>
 			</ul>
