fixed issue after renaming.

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/QuantityPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/QuantityPicker/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.QuantityPickerViewModel
+﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.QuantityPickerRenderingViewModel
 
 @{
     Layout = null;
