Basket MVP done

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -20,6 +20,7 @@
 		<header>
 
 			@Html.Sitecore().Placeholder("header")
+            @Html.Sitecore().Placeholder("header content")
 
 		</header>
 		<section>
