Async price calc done, now it needs to account for variant changes!

--- a/src/AvenueClothing.B2C/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.B2C/Css/uCommerce.demostore.css
@@ -645,3 +645,17 @@ p.btn-group.view-details {
     margin-bottom: 5px;
         opacity: 0.5;
 }
+
+ aside .item-price {
+        color: #46a546;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 40px;
+        margin: 10px 0 0;
+    }
+
+   aside .item-tax {
+        font-style: italic;
+        font-size: 0.9em;
+        color: #606060;
+    }
